<resources>
    <string name="app_name">Second Lesson</string>
    <string name="buttonNumber">1</string>
    <string name="buttonNumber2">2</string>
    <string name="buttonNumber3">3</string>
    <string name="buttonNumber4">4</string>
    <string name="buttonNumber5">5</string>
    <string name="buttonNumber6">6</string>
    <string name="buttonNumber7">7</string>
    <string name="buttonNumber8">8</string>
    <string name="buttonNumber9">9</string>
    <string name="buttonNumber0">0</string>
    <string name="buttonNumberDot">•</string>
    <string name="buttonNumberC">C</string>
    <string name="buttonNumberPlus">+</string>
    <string name="buttonNumberPercent">%</string>
    <string name="buttonNumberMultiply">*</string>
    <string name="buttonNumberDivide">÷</string>
    <string name="buttonNumberEqually">=</string>
    <string name="buttonNumberSquare">√¯</string>
    <string name="buttonNumberMinus">-</string>
    <string name="darkStyleRadioButton">Dark</string>
    <string name="lightStyleRadioButton">Light</string>
</resources>