<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNumber"
        android:textSize="@dimen/textButtonSize"
        android:layout_gravity="start|top"
        />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNumber2"
        android:textSize="@dimen/textButtonSize"
        android:layout_gravity="center|top"
        />
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNumber3"
        android:textSize="@dimen/textButtonSize"
        android:layout_gravity="end|top"
        />
    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNumber4"
        android:textSize="@dimen/textButtonSize"
        android:layout_gravity="start|center"
        />
    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNumber5"
        android:textSize="@dimen/textButtonSize"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNumber6"
        android:textSize="@dimen/textButtonSize"
        android:layout_gravity="end|center"

        />
    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNumber7"
        android:textSize="@dimen/textButtonSize"
        android:layout_gravity="start|bottom"
        />
    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNumber8"
        android:textSize="@dimen/textButtonSize"
        android:layout_gravity="center|bottom"
        />
    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNumber9"
        android:textSize="@dimen/textButtonSize"
        android:layout_gravity="end|bottom"
        />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNumber0"
        android:textSize="@dimen/textButtonSize" />


</FrameLayout>